fix: t#2376 align input create ws

--- a/javascript/apps/taiga/src/app/modules/workspace/feature-list/components/workspace-create/workspace-create.component.css
+++ b/javascript/apps/taiga/src/app/modules/workspace/feature-list/components/workspace-create/workspace-create.component.css
@@ -34,6 +34,10 @@ Copyright (c) 2021-present Kaleidos Ventures SL
     margin-inline-end: var(--spacing-8);
   }
 
+  & .input-project {
+    margin-block-start: -1px;
+  }
+
   & .workspace-input-project-name {
     inline-size: 278px;
   }
